syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.example.models";

message BalanceCheckRequest{
  int32 account_number = 1;
}
message Balance{
  int32 balance = 1 ;
}
message WithDrawMoneyRequest{
  int32 amount = 1;
}
message WithdrawRequest{
  int32 amount = 1;
}

message Money{
  int32 amount =1;
}

message MoneyBack{
  int32 amount =1;
}

service BankService{
  rpc getBalance(BalanceCheckRequest) returns (Balance);

  rpc withDraw(WithDrawMoneyRequest) returns(stream Money);
  rpc serverStream(WithdrawRequest) returns (stream Money);
  rpc clientStream(stream Money) returns (MoneyBack);
}